--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/avata.png" alt="" /></span>
 							<h1 id="title">ⒷⒾⒹⓄⓊ</h1>
 							<p>An apprentice web developer</p>
 						</div>
