--- a/podcast.html
+++ b/podcast.html
@@ -152,9 +152,9 @@
 
 				<a href="https://www.apple.com/maps/" class="image featured"><img src="images/img/podcast.jpg" alt="" /></a>
 
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure eos ipsum voluptas quaerat at deleniti aperiam nemo, ab doloremque velit maiores itaque quas aliquam. Assumenda placeat modi eius reprehenderit quam.</p>
+				<p>In this podcast i talking about  my cursus and why i want to be web developper,what is the most exciting thing in this field.</p>
 				<audio src="#"controls></audio>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem eos et magni eligendi possimus! Labore, facere recusandae necessitatibus et at omnis quam reprehenderit facilis placeat soluta illo non blanditiis doloremque?</p>
+				<p>I will put a summarizes of this podcast for hearing impaired people</p>
 
 			</div>
 		</section>
