--- a/podcast.html
+++ b/podcast.html
@@ -152,10 +152,26 @@
 
 				<a href="https://www.apple.com/maps/" class="image featured"><img src="images/img/podcast.jpg" alt="" /></a>
 
-				<p>In this podcast i talking about  my cursus and why i want to be web developper,what is the most exciting thing in this field.</p>
+				<p>In this podcast i talking about  my cursus and why i want to be web developper,what is the most exciting thing in this field.
+				</p>
 				<audio src="podcast/podcast.mp3"controls></audio>
-				<p>I will put a summarizes of this podcast for hearing impaired people</p>
+				<p>I put in below a summarizes of this podcast for hearing impaired peoples
+				</p>
+				<br/>
+				<p>Welcome to this podcast section
+					My name is bidou
+					i m going to do a quick podcast to introduce me
+					My cursus
+					this is the last experience that made me want to orient myself in digital
+					Why I want to be web developer
+					i want to resolve some coding problems 
 
+					What is the most existing thing s in this domaine
+					the possibility to work online, to travel and keep going to working in the same time 
+				</p>
+				<br/>
+				<video src="videos/parc.webm" width="375" height="280" controls>
+				</video>
 			</div>
 		</section>
 
